# cookiecluster

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  clusters.yaml  eks.tf  foo.yaml  karpenter.tf  main.tf  renovate.json  tarpaulin.toml  variables.tf
.cargo/: config.toml
cc/: Cargo.toml
cc/src/: cli.rs  inputs.rs  instances.rs  lib.rs  main.rs
cc/src/inputs/: add_on.rs  ami.rs  compute.rs  instances.rs  mod.rs
cc/src/inputs/snapshots/: cookiecluster__inputs__compute__tests__snapshot_instance_types-3.snap  cookiecluster__inputs__compute__tests__snapshot_instance_types-4.snap  cookiecluster__inputs__compute__tests__snapshot_instance_types-5.snap  cookiecluster__inputs__compute__tests__snapshot_instance_types-6.snap  cookiecluster__inputs__compute__tests__snapshot_instance_types-8.snap  cookiecluster__inputs__compute__tests__snapshot_instance_types-9.snap  cookiecluster__inputs__compute__tests__snapshot_instance_types.snap  cookiecluster__inputs__compute__tests__snapshot_nvidia_cbr_reservation.snap
cc/src/snapshots/: cookiecluster__cli__tests__snapshot_al2_arm64.snap  cookiecluster__cli__tests__snapshot_al2_x8664.snap  cookiecluster__cli__tests__snapshot_all_addons.snap  cookiecluster__cli__tests__snapshot_bottlerocket_arm64.snap  cookiecluster__cli__tests__snapshot_bottlerocket_x8664.snap  cookiecluster__cli__tests__snapshot_default.snap  cookiecluster__cli__tests__snapshot_enable_all.snap  cookiecluster__cli__tests__snapshot_neuron.snap  cookiecluster__cli__tests__snapshot_neuron_efa.snap  cookiecluster__cli__tests__snapshot_nvidia.snap  cookiecluster__cli__tests__snapshot_nvidia_efa_odcr.snap
cc/templates/: accel-mng.tpl  cluster.tpl  eks.tpl  neuron.tpl  nvidia.tpl  variables.tpl
cookiecluster/: Cargo.toml
cookiecluster/src/: cli.rs  config.rs  lib.rs  main.rs  template.rs
cookiecluster/src/inputs/: add_on.rs  ami.rs  compute.rs  instance.rs  mod.rs  validate.rs  version.rs
cookiecluster/src/inputs/snapshots/: cookiecluster__inputs__compute__tests__snapshot_arm64.snap  cookiecluster__inputs__compute__tests__snapshot_arm64_efa.snap  cookiecluster__inputs__compute__tests__snapshot_efa_arm64.snap  cookiecluster__inputs__compute__tests__snapshot_efa_neuron_x86_64.snap  cookiecluster__inputs__compute__tests__snapshot_efa_nvidia_x86_64.snap  cookiecluster__inputs__compute__tests__snapshot_efa_x86_64.snap  cookiecluster__inputs__compute__tests__snapshot_neuron_ml_cbr_x86_64.snap  cookiecluster__inputs__compute__tests__snapshot_neuron_x86_64.snap  cookiecluster__inputs__compute__tests__snapshot_neuron_x86_64_efa.snap  cookiecluster__inputs__compute__tests__snapshot_neuron_x86_64_ml_cbr.snap  cookiecluster__inputs__compute__tests__snapshot_neuron_x86_64_odcr.snap  cookiecluster__inputs__compute__tests__snapshot_nvidia_arm64.snap  cookiecluster__inputs__compute__tests__snapshot_nvidia_arm64_efa.snap  cookiecluster__inputs__compute__tests__snapshot_nvidia_cbr_reservation.snap  cookiecluster__inputs__compute__tests__snapshot_nvidia_ml_cbr_x86_64.snap  cookiecluster__inputs__compute__tests__snapshot_nvidia_x86_64.snap  cookiecluster__inputs__compute__tests__snapshot_nvidia_x86_64_efa.snap  cookiecluster__inputs__compute__tests__snapshot_nvidia_x86_64_ml_cbr.snap  cookiecluster__inputs__compute__tests__snapshot_nvidia_x86_64_odcr.snap  cookiecluster__inputs__compute__tests__snapshot_standard_arm64.snap  cookiecluster__inputs__compute__tests__snapshot_standard_x86_64.snap  cookiecluster__inputs__compute__tests__snapshot_x86_64.snap  cookiecluster__inputs__compute__tests__snapshot_x86_64_efa.snap
cookiecluster/src/snapshots/: cookiecluster__cli__tests__snapshot_al2023_instance_storage.snap  cookiecluster__cli__tests__snapshot_al2_arm64.snap  cookiecluster__cli__tests__snapshot_al2_instance_storage.snap  cookiecluster__cli__tests__snapshot_al2_x8664.snap  cookiecluster__cli__tests__snapshot_all_addons.snap  cookiecluster__cli__tests__snapshot_bottlerocket_arm64.snap  cookiecluster__cli__tests__snapshot_bottlerocket_x8664.snap  cookiecluster__cli__tests__snapshot_default.snap  cookiecluster__cli__tests__snapshot_enable_all.snap  cookiecluster__cli__tests__snapshot_karpenter.snap  cookiecluster__cli__tests__snapshot_neuron.snap  cookiecluster__cli__tests__snapshot_neuron_efa.snap  cookiecluster__cli__tests__snapshot_nvidia.snap  cookiecluster__cli__tests__snapshot_nvidia_efa.snap  cookiecluster__cli__tests__snapshot_nvidia_efa_cbr.snap  cookiecluster__cli__tests__snapshot_nvidia_efa_odcr.snap
cookiecluster/src/snapshots/al2-arm64/: cookiecluster__cli__tests__eks.snap
cookiecluster/src/snapshots/al2-instance-storage/: cookiecluster__cli__tests__eks.snap
cookiecluster/src/snapshots/al2-x86-64/: cookiecluster__cli__tests__eks.snap
cookiecluster/src/snapshots/al2023-arm64/: cookiecluster__cli__tests__eks.snap  cookiecluster__cli__tests__helm.snap
cookiecluster/src/snapshots/al2023-instance-storage/: cookiecluster__cli__tests__eks.snap  cookiecluster__cli__tests__eks.snap.new  cookiecluster__cli__tests__main.snap
cookiecluster/src/snapshots/al2023-x86-64/: cookiecluster__cli__tests__eks.snap  cookiecluster__cli__tests__eks.snap.new
cookiecluster/src/snapshots/al2032-arm64/: cookiecluster__cli__tests__eks.snap  cookiecluster__cli__tests__eks.snap.new  cookiecluster__cli__tests__karpenter.snap
cookiecluster/src/snapshots/all-add-ons/: cookiecluster__cli__tests__eks.snap  cookiecluster__cli__tests__eks.snap.new  cookiecluster__cli__tests__main.snap
cookiecluster/src/snapshots/auto-mode-efa/: cookiecluster__cli__tests__eks.snap  cookiecluster__cli__tests__main.snap
cookiecluster/src/snapshots/auto-mode-neuron/: cookiecluster__cli__tests__main.snap
cookiecluster/src/snapshots/auto-mode-nvidia/: cookiecluster__cli__tests__eks.snap  cookiecluster__cli__tests__main.snap
cookiecluster/templates/: accel-mng.tpl  addons.tpl  cluster.tpl  clusters.yaml  eks.tpl  helm.tpl  karpenter.tpl  main.tpl  network.tpl  node-group-accel.tpl  node-groups.tpl  pod-identity.tpl  variables.tpl
xtask/: Cargo.toml
xtask/src/: main.rs
(+125 files in other folders)
