[workspace]
members = [
  "cookiecluster",
  "xtask",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
authors = ["Bryant Biggs <bryantbiggs@gmail.com>"]
documentation = "https://github.com/clowdhaus/cookiecluster"
homepage = "https://github.com/clowdhaus/cookiecluster"
repository = "https://github.com/clowdhaus/cookiecluster"
license = "Apache-2.0"
edition = "2021"
categories = [
  "command-line-utilities",
]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1", default-features = false, features = ["log-always"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "ansi"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
