[package]
name = "cookiecluster"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
categories.workspace = true

default-run = "cc"

[[bin]]
name = "cc"
path = "src/main.rs"

[dependencies]
anstyle = "1.0"
anyhow.workspace = true
clap = { version = "4.2", features = ["derive", "color"] }
clap-verbosity-flag = "2.0"
console = "*"
dialoguer = "0.11"
handlebars = "5.0"
rust-embed = { version = "8.0", features = ["compression"] }
serde.workspace = true
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true


[dev-dependencies]
insta = "1.29"
rstest = "0.21"
