[package]
name = "cookiecluster"
version.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
categories.workspace = true

default-run = "cookiecluster"

[dependencies]
anstyle = "1.0"
anyhow.workspace = true
clap = { version = "4.2", features = ["derive", "color"] }
clap-verbosity-flag = "3.0"
console = { version = "0.15", default-features = false }
dialoguer = { version = "0.11", default-features = false }
handlebars =  "6.1"
rust-embed = { version = "8.0", features = ["compression"] }
serde.workspace = true
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
insta = "1.41"
rstest = "0.24"
