[package]
name = "cookiecluster"
version.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
categories.workspace = true

default-run = "cookiecluster"

[dependencies]
anstyle = "1.0"
anyhow.workspace = true
clap = { version = "4.5", features = ["derive", "color"] }
clap-verbosity-flag = "3.0"
config = { version = "0.15", default-features = false, features = ["yaml"] }
dialoguer = { version = "0.12", default-features = false }
handlebars =  "6.3"
rust-embed = { version = "8.9", features = ["compression"] }
serde.workspace = true
serde_json = "1.0"
serde_yaml = "0.9"
strum = "0.27"
strum_macros = "0.27"
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
insta = "1.44"
rstest = "0.26"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
