[package]
name = "xtask"
version.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
aws-config = {version="1.8", features=["behavior-version-latest"]}
aws-types = "1.3"
aws-sdk-ec2 = "1.141"
handlebars = "6.3"
serde.workspace = true
serde_json = "1.0"
tokio = { version = "1.45", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
